[package]
name = "gophersweeper-lib"
author = "Hidekel Dietrich"
description = "Minesweeper generator library, but instead of mines you must avoid Go devs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/HidekelDietrich/GopherSweeper"

[dependencies]
rand = "0.8.5"
